mostly fixed admin