@@ -7,6 +7,6 @@ javac -cp "lib\sqlite-jdbc-3.50.3.0.jar" -d out $sources
 
 To run:
 
-java -cp "out;lib\sqlite-jdbc-3.50.3.0.jar" Main
+java --enable-native-access=ALL-UNNAMED -cp "out;lib\sqlite-jdbc-3.50.3.0.jar" Main
 
 
